<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- all the screen goes here -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#252525"
        android:weightSum="8">

        <TextView
            android:id="@+id/output"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:text="@string/output"
            android:textColor="#fff"
            android:textSize="50sp"
            android:gravity="end|bottom"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingLeft="0dp" />

        <!-- Buttons will go here -->

        <!-- first row -->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:weightSum="5"
            android:background="#222222">

            <TableRow
                android:layout_weight="1">
                <Button
                    android:id="@+id/ac"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights"
                    android:text="@string/ac"
                    android:textSize="22sp"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

                <Button
                    android:id="@+id/modulus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights"
                    android:text="@string/modulus"
                    android:textSize="22sp"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

                <Button
                    android:id="@+id/backspace"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights"
                    android:text="@string/backspace"
                    android:textSize="22sp"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

                <Button
                    android:id="@+id/divide"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights"
                    android:text="@string/divide"
                    android:textSize="22sp"
                    style="@style/Widget.AppCompat.Button.Borderless"/>
            </TableRow>

            <TableRow
                android:layout_weight="1">

                <Button
                    android:id="@+id/seven"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights"
                    android:text="@string/seven"
                    android:textSize="22sp"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

                <Button
                    android:id="@+id/eight"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights"
                    android:text="@string/eight"
                    android:textSize="22sp"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

                <Button
                    android:id="@+id/nine"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights"
                    android:text="@string/nine"
                    android:textSize="22sp"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

                <Button
                    android:id="@+id/multiply"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights"
                    android:text="@string/multiply"
                    android:textSize="22sp"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

            </TableRow>

            <TableRow
                android:layout_weight="1">

                <Button
                    android:id="@+id/four"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights"
                    android:text="@string/four"
                    android:textSize="22sp"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

                <Button
                    android:id="@+id/five"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights"
                    android:text="@string/five"
                    android:textSize="22sp"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

                <Button
                    android:id="@+id/six"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights"
                    android:text="@string/six"
                    android:textSize="22sp"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

                <Button
                    android:id="@+id/minus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights"
                    android:text="@string/minus"
                    android:textSize="22sp"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

            </TableRow>

            <TableRow
                android:layout_weight="1">

                <Button
                    android:id="@+id/one"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights"
                    android:text="@string/one"
                    android:textSize="22sp"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

                <Button
                    android:id="@+id/two"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights"
                    android:text="@string/two"
                    android:textSize="22sp"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

                <Button
                    android:id="@+id/three"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights"
                    android:text="@string/three"
                    android:textSize="22sp"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

                <Button
                    android:id="@+id/addition"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights"
                    android:text="@string/addition"
                    android:textSize="22sp"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

            </TableRow>

            <TableRow
                android:layout_weight="1">

                <Button
                    android:id="@+id/double_zero"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights"
                    android:text="@string/double_zero"
                    android:textSize="22sp"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

                <Button
                    android:id="@+id/zero"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights"
                    android:text="@string/zero"
                    android:textSize="22sp"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

                <Button
                    android:id="@+id/dot"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights"
                    android:text="@string/dot"
                    android:textSize="22sp"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

                <Button
                    android:id="@+id/equals"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights"
                    android:text="@string/equals"
                    android:textSize="22sp"
                    android:background="#FF9800"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

            </TableRow>

        </TableLayout>



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>